packages/java/src/main/resources/natives/macos-arm64/include/xberg.h


typedef struct XBERGChunkingConfig XBERGChunkingConfig;
typedef struct XBERGContentFilterConfig XBERGContentFilterConfig;
typedef struct XBERGDocumentStructure XBERGDocumentStructure;
typedef struct XBERGEmbeddingConfig XBERGEmbeddingConfig;
typedef struct XBERGExtractInput XBERGExtractInput;
typedef struct XBERGExtractionConfig XBERGExtractionConfig;
typedef struct XBERGFootnoteConfig XBERGFootnoteConfig;
typedef struct XBERGHierarchyConfig XBERGHierarchyConfig;
typedef struct XBERGHtmlOutputConfig XBERGHtmlOutputConfig;
typedef struct XBERGImageExtractionConfig XBERGImageExtractionConfig;
typedef struct XBERGLanguageDetectionConfig XBERGLanguageDetectionConfig;
typedef struct XBERGLayoutDetectionConfig XBERGLayoutDetectionConfig;
typedef struct XBERGOcrConfig XBERGOcrConfig;
typedef struct XBERGOcrQualityThresholds XBERGOcrQualityThresholds;
typedef struct XBERGPageConfig XBERGPageConfig;
typedef struct XBERGPdfConfig XBERGPdfConfig;
typedef struct XBERGPostProcessorConfig XBERGPostProcessorConfig;
typedef struct XBERGRedactionConfig XBERGRedactionConfig;
typedef struct XBERGRedactionPattern XBERGRedactionPattern;
typedef struct XBERGRedactionTerm XBERGRedactionTerm;
typedef struct XBERGRerankerConfig XBERGRerankerConfig;
typedef struct XBERGSecurityLimits XBERGSecurityLimits;
typedef struct XBERGServerConfig XBERGServerConfig;
typedef struct XBERGSvgOptions XBERGSvgOptions;
typedef struct XBERGTokenCounter XBERGTokenCounter;
typedef struct XBERGTokenReductionConfig XBERGTokenReductionConfig;
typedef struct XBERGTokenReductionOptions XBERGTokenReductionOptions;
typedef struct XBERGTranscriptionConfig XBERGTranscriptionConfig;
typedef struct XBERGTreeSitterConfig XBERGTreeSitterConfig;
typedef struct XBERGTreeSitterProcessConfig XBERGTreeSitterProcessConfig;
typedef struct XBERGUrlExtractionConfig XBERGUrlExtractionConfig;
XBERGContentFilterConfig *xberg_content_filter_config_default(void);
XBERGExtractionConfig *xberg_extraction_config_default(void);
int32_t xberg_extraction_config_needs_image_data(const XBERGExtractionConfig *this_);
int32_t xberg_extraction_config_needs_image_processing(const XBERGExtractionConfig *this_);
XBERGSvgOptions *xberg_svg_options_default(void);
uint8_t *xberg_extract_input_bytes(const XBERGExtractInput *ptr,
                                   uintptr_t *out_len);
char *xberg_extract_input_uri(const XBERGExtractInput *ptr);
XBERGExtractInput *xberg_extract_input_default(void);
XBERGUrlExtractionConfig *xberg_url_extraction_config_default(void);
XBERGImageExtractionConfig *xberg_image_extraction_config_default(void);
XBERGTokenReductionOptions *xberg_token_reduction_options_default(void);
XBERGLanguageDetectionConfig *xberg_language_detection_config_default(void);
XBERGHtmlOutputConfig *xberg_html_output_config_default(void);
XBERGLayoutDetectionConfig *xberg_layout_detection_config_default(void);
XBERGOcrQualityThresholds *xberg_ocr_quality_thresholds_default(void);
XBERGOcrConfig *xberg_ocr_config_default(void);
XBERGPageConfig *xberg_page_config_default(void);
XBERGPdfConfig *xberg_pdf_config_default(void);
XBERGHierarchyConfig *xberg_hierarchy_config_default(void);
XBERGPostProcessorConfig *xberg_post_processor_config_default(void);
XBERGChunkingConfig *xberg_chunking_config_default(void);
XBERGEmbeddingConfig *xberg_embedding_config_default(void);
XBERGRedactionConfig *xberg_redaction_config_default(void);
int32_t xberg_redaction_config_validate(const XBERGRedactionConfig *this_);
XBERGRedactionTerm *xberg_redaction_term_literal(const char *value);
XBERGRedactionTerm *xberg_redaction_term_labeled(const char *label,
                                                 const char *value);
XBERGRedactionPattern *xberg_redaction_pattern_labeled(const char *label,
                                                       const char *pattern);
XBERGRerankerConfig *xberg_reranker_config_default(void);
XBERGTranscriptionConfig *xberg_transcription_config_default(void);
XBERGTreeSitterConfig *xberg_tree_sitter_config_default(void);
XBERGTreeSitterProcessConfig *xberg_tree_sitter_process_config_default(void);
XBERGServerConfig *xberg_server_config_default(void);
char *xberg_server_config_listen_addr(const XBERGServerConfig *this_);
int32_t xberg_server_config_cors_allows_all(const XBERGServerConfig *this_);
int32_t xberg_server_config_is_origin_allowed(const XBERGServerConfig *this_,
                                              const char *origin);
uintptr_t xberg_server_config_max_request_body_mb(const XBERGServerConfig *this_);
uintptr_t xberg_server_config_max_multipart_field_mb(const XBERGServerConfig *this_);
XBERGSecurityLimits *xberg_security_limits_default(void);
XBERGTokenReductionConfig *xberg_token_reduction_config_default(void);
XBERGTokenCounter *xberg_token_counter_new(void);
XBERGFootnoteConfig *xberg_footnote_config_default(void);
XBERGFootnoteConfig *xberg_footnote_config_with_parse_citations(XBERGFootnoteConfig *this_,
                                                                int32_t enabled);
void xberg_document_structure_finalize_node_types(XBERGDocumentStructure *this_);
int32_t xberg_document_structure_is_empty(const XBERGDocumentStructure *this_);
XBERGDocumentStructure *xberg_document_structure_default(void);