packages/csharp/src/Xberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_detect_mime_type")]
    internal static extern IntPtr DetectMimeType(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        [MarshalAs(UnmanagedType.U1)] bool checkExists
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embed_texts_async")]
    internal static extern IntPtr EmbedTextsAsync(
        IntPtr texts,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_get_embedding_preset")]
    internal static extern IntPtr GetEmbeddingPreset(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_embedding_presets")]
    internal static extern IntPtr ListEmbeddingPresets();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_rerank")]
    internal static extern IntPtr Rerank(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
        IntPtr documents,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_get_reranker_preset")]
    internal static extern IntPtr GetRerankerPreset(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_list_reranker_presets")]
    internal static extern IntPtr ListRerankerPresets();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_content_filter_config_default")]
    internal static extern IntPtr ContentFilterConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_default")]
    internal static extern IntPtr ExtractionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_needs_image_data")]
    internal static extern int ExtractionConfigNeedsImageData(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_config_needs_image_processing")]
    internal static extern int ExtractionConfigNeedsImageProcessing(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_svg_options_default")]
    internal static extern IntPtr SvgOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_default")]
    internal static extern IntPtr ExtractInputDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_bytes")]
    internal static extern IntPtr ExtractInputBytes(
        IntPtr bytes,
        UIntPtr bytesLen,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string mimeType,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extract_input_uri")]
    internal static extern IntPtr ExtractInputUri(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string uri
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_output_single")]
    internal static extern IntPtr ExtractionOutputSingle(
        IntPtr result
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_url_extraction_config_default")]
    internal static extern IntPtr UrlExtractionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_image_extraction_config_default")]
    internal static extern IntPtr ImageExtractionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_reduction_options_default")]
    internal static extern IntPtr TokenReductionOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_language_detection_config_default")]
    internal static extern IntPtr LanguageDetectionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_html_output_config_default")]
    internal static extern IntPtr HtmlOutputConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_layout_detection_config_default")]
    internal static extern IntPtr LayoutDetectionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_quality_thresholds_default")]
    internal static extern IntPtr OcrQualityThresholdsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_ocr_config_default")]
    internal static extern IntPtr OcrConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_config_default")]
    internal static extern IntPtr PageConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_pdf_config_default")]
    internal static extern IntPtr PdfConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_hierarchy_config_default")]
    internal static extern IntPtr HierarchyConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_post_processor_config_default")]
    internal static extern IntPtr PostProcessorConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunking_config_default")]
    internal static extern IntPtr ChunkingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_embedding_config_default")]
    internal static extern IntPtr EmbeddingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_default")]
    internal static extern IntPtr RedactionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_config_validate")]
    internal static extern void RedactionConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_literal")]
    internal static extern IntPtr RedactionTermLiteral(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_term_labeled")]
    internal static extern IntPtr RedactionTermLabeled(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string label,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_redaction_pattern_labeled")]
    internal static extern IntPtr RedactionPatternLabeled(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string label,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_reranker_config_default")]
    internal static extern IntPtr RerankerConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_transcription_config_default")]
    internal static extern IntPtr TranscriptionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tree_sitter_config_default")]
    internal static extern IntPtr TreeSitterConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tree_sitter_process_config_default")]
    internal static extern IntPtr TreeSitterProcessConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_default")]
    internal static extern IntPtr ServerConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_listen_addr")]
    internal static extern IntPtr ServerConfigListenAddr(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_cors_allows_all")]
    internal static extern int ServerConfigCorsAllowsAll(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_is_origin_allowed")]
    internal static extern int ServerConfigIsOriginAllowed(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string origin
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_max_request_body_mb")]
    internal static extern ulong ServerConfigMaxRequestBodyMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_server_config_max_multipart_field_mb")]
    internal static extern ulong ServerConfigMaxMultipartFieldMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_security_limits_default")]
    internal static extern IntPtr SecurityLimitsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_reduction_config_default")]
    internal static extern IntPtr TokenReductionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_backend_new")]
    internal static extern IntPtr LlmBackendNew(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_backend_detect")]
    internal static extern IntPtr LlmBackendDetect(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        IntPtr categories
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_llm_backend_detect_with_custom")]
    internal static extern IntPtr LlmBackendDetectWithCustom(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        IntPtr categories,
        IntPtr customLabels
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_token_counter_new")]
    internal static extern IntPtr TokenCounterNew();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_default")]
    internal static extern IntPtr FootnoteConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_footnote_config_with_parse_citations")]
    internal static extern IntPtr FootnoteConfigWithParseCitations(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enabled
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_finalize_node_types")]
    internal static extern void DocumentStructureFinalizeNodeTypes(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_is_empty")]
    internal static extern int DocumentStructureIsEmpty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_document_structure_default")]
    internal static extern IntPtr DocumentStructureDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_extraction_result_from_ocr")]
    internal static extern IntPtr ExtractionResultFromOcr(
        IntPtr ocr
    );
